--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,7 @@
-[core]
-	excludesfile = /Users/feliperodrigues/.gitignore_global
-	editor = subl -w
+
 [user]
-	email = feliperodrigues@gmail.com
-	name = Felipe Rodrigues
+	email = michelribeiro2004@gmail.com
+	name = michel ribeiro
 [filter "media"]
 	required = true
 	clean = git media clean %f
